--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -12,7 +12,7 @@ name: OpenWrt-CI
 # on:
 # push:
 # branches: 
-      - master
+#     - master
   # schedule:
   #   - cron: 0 20 * * *
   # release:
